--- a/nick/app.css
+++ b/nick/app.css
@@ -3089,6 +3089,422 @@ footer .copyright {
   margin-top: 1rem;
 }
 
+.growth-campaigns.container {
+  max-width: 760px;
+}
+
+.growth-campaigns .info-icon {
+  padding-top: 30px;
+}
+
+.growth-campaigns .info-icon img {
+  width: 28px;
+}
+
+.growth-campaigns .indicators {
+  font-size: 10px;
+  color: #455d75;
+}
+
+.growth-campaigns .campaign-progress .background {
+  background-color: var(--pale-grey-two);
+  border-radius: 5px;
+  border: 1px solid #c2cbd3;
+  height: 10px;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.growth-campaigns .campaign-progress .foreground {
+  background-color: var(--clear-blue);
+  border: 1px solid var(--greenblue);
+  border-radius: 5px;
+  height: 100%;
+  z-index: 2;
+  position: relative;
+  -webkit-transition: width 0.5s;
+  -ms-transition: width 0.5s;
+  -moz-transition: width 0.5s;
+  -webkit-transition: width 0.5s;
+  transition: width 0.5s;
+}
+
+.growth-campaigns .campaign-progress {
+  height: 10px;
+  width: 100%;
+  position: relative;
+}
+
+.growth-campaigns .ogn-amount {
+  color: var(--clear-blue);
+}
+
+.growth-campaigns .ogn-icon {
+  position: relative;
+  top: -3px;
+}
+
+.growth-campaigns .campaign-info {
+  padding-top: 40px;
+}
+
+.growth-campaigns h5 {
+  text-align: center;
+}
+
+.growth-campaigns .action-title {
+  font-weight: bold;
+  color: var(--steel);
+  margin-top: 30px;
+  margin-left: 5px;
+  margin-bottom: -5px;
+}
+
+.growth-campaigns .campaign-list .status {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+.growth-campaigns .campaign-list .status.inactive {
+  background-color: var(--light);
+}
+
+.growth-campaigns .campaign-list .status.active {
+  background-color: var(--greenblue);
+}
+
+.growth-campaigns .campaign-list .campaign .name {
+  font-size: 0.88rem;
+  line-height: 1.93;
+  color: var(--bluey-grey);
+  font-weight: normal;
+}
+
+.growth-campaigns .campaign-list .campaign .name.active {
+  color: var(--dark);
+}
+
+.growth-campaigns .campaign-list .campaign .select-bar {
+  background-color: var(--clear-blue);
+  height: 4px;
+  width: 100%;
+}
+
+.growth-campaigns .campaign-list img {
+  width: 20px;
+  height: 20px;
+  vertical-align: inherit;
+}
+
+.growth-campaigns .action .background {
+  width: 72px;
+}
+
+.growth-campaigns .action .profile {
+  position: absolute;
+  left: 20px;
+  top: 27px;
+  width: 30px;
+}
+
+.growth-campaigns .action .email {
+  position: absolute;
+  left: 20px;
+  top: 27px;
+  width: 30px;
+}
+
+.growth-campaigns .action .phone {
+  position: absolute;
+  left: 25px;
+  top: 20px;
+  width: 22px;
+}
+
+.growth-campaigns .action .facebook {
+  position: absolute;
+  left: 24px;
+  top: 18px;
+  width: 21px;
+}
+
+.growth-campaigns .action .airbnb {
+  position: absolute;
+  left: 15px;
+  top: 19px;
+  width: 44px;
+}
+
+.growth-campaigns .action .twitter {
+  position: absolute;
+  left: 17px;
+  top: 22px;
+  width: 39px;
+}
+
+.growth-campaigns .action .lock {
+  position: absolute;
+  right: -12px;
+  bottom: 0px;
+  width: 30px;
+}
+
+.growth-campaigns .action .image-holder {
+  position: relative;
+}
+
+.growth-campaigns .action .title {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.growth-campaigns .action .info-text {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.growth-campaigns .action .reward {
+  padding-right: 10px;
+  height: 28px;
+  background-color: var(--pale-grey);
+  border-radius: 52px;
+  font-size: 14px;
+  font-weight: bold;
+  color: var(--clear-blue);
+}
+
+.growth-campaigns .action .reward .value {
+  padding-bottom: 1px;
+}
+
+.growth-campaigns .action .sub-text {
+  font-size: 14px;
+  font-weight: bold;
+  padding-top: 5px;
+  margin-right: 6px;
+}
+
+.growth-campaigns .action .reward img {
+  margin-right: 6px;
+}
+
+.growth-campaigns .action img {
+  width: 19px;
+}
+
+.growth-campaigns .action .astronaut {
+  width: 77px;
+  margin-top: -10px;
+  margin-left: -15px;
+}
+
+.growth-campaigns .action {
+  height: 140px;
+  border: 1px solid var(--light);
+  border-radius: 5px;
+  margin-top: 20px;
+  padding: 20px;
+}
+
+.growth-enrollment-modal .input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+.growth-enrollment-modal {
+  padding-top: 20px;
+  max-width: 620px !important;
+}
+
+.growth-enrollment-modal .normal-line-height {
+  line-height: normal;
+}
+
+.growth-enrollment-modal .title {
+  font-family: Poppins;
+  font-size: 24px;
+}
+
+.growth-enrollment-modal .title-light {
+  font-weight: 300;
+}
+
+.growth-enrollment-modal .image-holder {
+  position: relative;
+  width: 400px;
+}
+
+.growth-enrollment-modal .info-text {
+  max-width: 400px;
+}
+
+.growth-enrollment-modal .red-x-image {
+  position: absolute;
+  right: 110px;
+  bottom: 10px;
+}
+
+.growth-enrollment-modal .checkbox-holder input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.growth-enrollment-modal .btn {
+  margin-top: 30px;
+  min-width: 9rem;
+}
+
+.growth-enrollment-modal .checkbox-holder .country-check {
+  position: absolute;
+  opacity: 0;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  filter: alpha(opacity=0);
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.growth-enrollment-modal .checkbox-holder .checkmark {
+  position: absolute;
+  top: 4px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border-radius: 5px;
+  background-color: var(--dark);
+}
+
+.growth-enrollment-modal .checkbox-holder .checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.growth-enrollment-modal .checkbox-holder .checkmark:after {
+  left: 7px;
+  top: 2px;
+  width: 7px;
+  height: 13px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.growth-enrollment-modal .checkbox-holder {
+  display: block;
+  position: relative;
+  padding-left: 28px;
+  margin-bottom: 0px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.growth-enrollment-modal .country-check-label {
+  font-weight: 300;
+}
+
+.growth-enrollment-modal .terms {
+  font-size: 14px;
+  overflow-y: scroll;
+  height: 250px;
+  background-color: var(--dark-two);
+  margin: 24px 0px;
+  text-align: left;
+  padding: 22px 31px 15px 22px;
+  font-weight: 300;
+}
+
+.growth-enrollment-modal .metamask-video {
+  margin-top: 90px;
+  margin-bottom: 42px;
+}
+
+.growth-enrollment-modal .metamask .title {
+  font-weight: 300;
+}
+
+.growth-enrollment-modal .metamask .info-text {
+  margin-bottom: 75px;
+}
+
+.growth-welcome {
+  margin-top: 100px;
+}
+
+.growth-welcome .logo {
+  width: 118px;
+}
+
+.growth-welcome .title-text {
+  margin-top: 40px;
+  margin-bottom: 16px;
+  font-family: Poppins;
+  font-size: 50px;
+  font-weight: 200;
+  line-height: 1.3;
+}
+
+.growth-welcome .btn {
+  margin-top: 40px;
+  width: 336px;
+  height: 60px;
+  font-size: 24px;
+  font-weight: 900;
+}
+
+.growth-welcome .info-title {
+  font-size: 28px;
+  font-family: Poppins;
+  font-weight: bold;
+  text-align: center;
+}
+
+.growth-welcome .token-stack-holder {
+  position: relative;
+}
+
+.growth-welcome .token-stack {
+  width: 440px;
+}
+
+.growth-welcome .free-badge {
+  position: absolute;
+  width: 168px;
+  right: 15px;
+  bottom: 35px;
+}
+
+.growth-welcome .infographics .title {
+  text-align: center;
+  font-weight: bold;
+}
+
+.growth-welcome .infographics .text {
+  text-align: center;
+  font-size: 14px;
+}
+
+.growth-welcome .infographics {
+  background-color: #f1f6f9;
+  border-radius: 5px;
+  height: 317px;
+}
+
 .purchases {
   padding-top: 3rem;
 }
@@ -4258,7 +4674,7 @@ footer .copyright {
   display: flex;
   white-space: nowrap;
   align-items: center;
-  padding: 0.85rem 1.25rem;
+  padding: 0.625rem 1.25rem;
   font-size: 18px;
   font-weight: bold;
   border-bottom: 1px solid var(--light);
@@ -4330,6 +4746,10 @@ footer .copyright {
   background-image: url(images/messages-icon-selected.svg);
 }
 
+.navbar .nav-item.messages .count .btn {
+  margin-left: 1.5rem;
+}
+
 .listing-detail {
   margin-top: 2.5rem;
 }
@@ -4340,6 +4760,7 @@ footer .copyright {
   font-weight: 200;
   font-style: normal;
   color: var(--dark);
+  line-height: 1.25;
 }
 
 .listing-detail .header {
@@ -4369,8 +4790,11 @@ footer .copyright {
 }
 
 .listing-detail .description {
-  margin-top: 2rem;
   white-space: pre-wrap;
+}
+
+.listing-detail .gallery {
+  margin-bottom: 2rem;
 }
 
 .listing-detail .listing-buy > .btn {
@@ -4393,20 +4817,33 @@ footer .copyright {
   padding-top: 0;
 }
 
-.listing-detail .listing-buy .price > span {
+.listing-detail .listing-buy .price .eth > span {
   font-weight: normal;
 }
 
-.listing-detail .listing-buy .price {
+.listing-detail .listing-buy .price .eth {
   background: url(images/eth-icon.svg) no-repeat;
   background-size: 1.5rem;
-  padding: 0.2rem 0 1.5rem 2rem;
-  line-height: 1rem;
+  padding-left: 2rem;
+  line-height: 1.5rem;
   font-family: var(--default-font);
   font-size: 24px;
   font-weight: bold;
   font-style: normal;
   color: #000000;
+}
+
+.listing-detail .listing-buy .price .usd {
+  color: var(--steel);
+  font-weight: normal;
+  margin-left: 1rem;
+  font-size: 16px;
+}
+
+.listing-detail .listing-buy .price {
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 1.5rem;
 }
 
 .listing-detail .listing-buy.multi .price {
@@ -4470,6 +4907,7 @@ footer .copyright {
   padding: 1.5rem;
   border-radius: var(--default-radius);
   background-color: var(--pale-grey-eight);
+  margin-bottom: 1rem;
 }
 
 @media (max-width: 767.98px) {
